feat(api): add product progress view
